--- a/frontend/src/app/utils/navbar/navbar.component.html
+++ b/frontend/src/app/utils/navbar/navbar.component.html
@@ -53,7 +53,7 @@
           </div>
       </a>
 
-      <a href="#" class="btn btn--4">
+      <!-- <a href="#" class="btn btn--4">
           <div class="content">
               <div class="front">
                   <div class="border"></div>
@@ -64,7 +64,7 @@
                   <p class="btn--4">Mon<br> compte</p>
               </div>
           </div>
-      </a>
+      </a> -->
 
       <a [routerLink]="['/registration']" class="btn btn--5">
           <div class="content">
