--- a/frontend/src/app/activity/activity-list/activity-list.component.html
+++ b/frontend/src/app/activity/activity-list/activity-list.component.html
@@ -31,8 +31,8 @@
                   <h5 class="title bold">{{p.title}}</h5>
                   <p class="card-text text-truncate">Description : {{p.content}}</p>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><span class="italic text-muted"> Age :</span> {{p.age_id}}</li>
-                    <li class="list-group-item"><span class="italic text-muted">Catégorie :</span> {{p.categorie_id}}
+                    <li class="list-group-item"><span class="italic text-muted"> Age :</span> {{p.age.name}}</li>
+                    <li class="list-group-item"><span class="italic text-muted">Catégorie :</span> {{p.categorie.name}}
                     </li>
                     <li class="list-group-item"><span class="italic text-muted">Latitude :</span> <br>{{p.lat}} ,<br>
                       <span class="italic text-muted">Longitude : </span><br>{{p.lng}}</li>
