--- a/frontend/src/app/activity/activity-list/activity-list.component.html
+++ b/frontend/src/app/activity/activity-list/activity-list.component.html
@@ -27,7 +27,7 @@
             <div class="row card-group ">
               <div class="col-4 mb-3" *ngFor="let p of pis">
                 <img src="assets/images/father.jpg" class="card-img-top" alt="...">
-                <div class="card ">
+                <div class="card " [style]="'background-color: ' +  catType.iconBackgroundColor">
                   <h5 class="title bold">{{p.title}}</h5>
                   <p class="card-text text-truncate">Description : {{p.content}}</p>
                   <ul class="list-group list-group-flush">
