affichage de la catégorie dans le détail

--- a/frontend/src/app/detail-pi/detail-pi.component.html
+++ b/frontend/src/app/detail-pi/detail-pi.component.html
@@ -6,8 +6,8 @@
         <div class="card-body ">
           <h5 class="card-title amber">{{title}}</h5>
           <p>
-            <!-- <span class="badge rounded-pill bg-info text-dark me-2" *ngFor="let p of pis">{{p.categorie.name}}</span> -->
-            <!-- <span class="badge rounded-pill bg-success me-2">{{ages}}</span> -->
+            <span class="badge rounded-pill bg-info text-dark me-2">{{categories}}</span>
+            <span class="badge rounded-pill bg-success me-2">{{ages}}</span>
             <span class="badge rounded-pill bg-danger">{{address}}</span>
           </p>
           <p class="card-text"><span class="italic text-muted">Description :</span>  {{content}}</p>
