--- a/frontend/src/app/activity/activity-list/activity-list.component.html
+++ b/frontend/src/app/activity/activity-list/activity-list.component.html
@@ -44,7 +44,7 @@
                       <span class="italic text-muted">Longitude : </span><br>{{p.lng}}</li>
                   </ul>
                   <button class="btn-pink-outline mb-3"
-                    (click)="geodecode(p.lat, p.lng, p.id, p.content, p.title, ageName,categorieName)">Voir</button>
+                    (click)="geodecode(p.lat, p.lng, p.id, p.content, p.title, ageName, p.categorie.name)">Voir</button>
                   <p *ngIf="ifClickAdress">{{test}}</p>
                 </div>
               </div>
