--- a/frontend/src/app/activity/activity-list/activity-list.component.html
+++ b/frontend/src/app/activity/activity-list/activity-list.component.html
@@ -40,11 +40,11 @@
                     <li class="list-group-item"><span class="italic text-muted"> Age :</span> {{p.age.name}}</li>
                     <li class="list-group-item"><span class="italic text-muted">Catégorie :</span> {{p.categorie.name}}
                     </li>
-                    <li *ngIf="!cityIsVisible" class="list-group-item"><span class="italic text-muted">Latitude :</span> <br>{{p.lat}} ,<br>
-                      <span class="italic text-muted">Longitude : </span><br>{{p.lng}}</li>
-                      <li *ngIf="cityIsVisible">{{test}}</li>
+                    <!-- <li *ngIf="!cityIsVisible" class="list-group-item"><span class="italic text-muted">Latitude :</span> <br>{{p.lat}} ,<br>
+                      <span class="italic text-muted">Longitude : </span><br>{{p.lng}}</li> -->
+                      <li>{{test}}</li>
                   </ul>
-                  <button (click)="searchCity(p.lat, p.lng)">Ville</button>
+                  <!-- <button (click)="searchCity(p.lat, p.lng)">Ville</button> -->
                   <button class="btn-pink-outline mb-3"
                     (click)="geodecode(p.lat, p.lng, p.id, p.content, p.title, p.age.name, p.categorie.name)">Voir</button>
                 </div>
