--- a/frontend/src/app/detail-pi/detail-pi.component.html
+++ b/frontend/src/app/detail-pi/detail-pi.component.html
@@ -1,9 +1,10 @@
-<div class="d-flex">
+<div class="d-flex justify-content-center">
   <div class="d-flex justify-content-evenly align-items-center bg-blue col-11 br-10">
     <div class="col-6 mx-4 my-5 h-550px br-10" id="map"></div>
     <div class="col-4">
       <div class="card ">
         <div class="card-body ">
+
           <h5 class="card-title amber">{{title}}</h5>
           <p>
             <span class="badge rounded-pill bg-info text-dark me-2">{{categories}}</span>
