--- a/frontend/src/app/path/list/list.component.html
+++ b/frontend/src/app/path/list/list.component.html
@@ -1,1 +1,4 @@
-<p>list works!</p>
+
+        <h1>GPS</h1>
+<div class="col-6 mx-3 my-3 h-550px br-10" id="map"></div>
+<img src="../../../assets/images/biblio.jpg" alt="">
