ajout du formulaire, ajout de la carte et de la possibilité de recherche d'adresse

--- a/frontend/src/app/pic/form-pic/form-pic.component.html
+++ b/frontend/src/app/pic/form-pic/form-pic.component.html
@@ -1,1 +1,14 @@
-<p>form-pic works!</p>
+<div class="d-flex justify-content-center">
+    <form action="" class="d-flex flex-column">
+        <input type="text" placeholder="Nom">
+        <input type="text"placeholder="Adresse">
+        <select name="" id="">
+            <option value="">Restaurant</option>
+            <option value="">Bar</option>
+            <option value="">Hotel</option>
+        </select>
+    </form>
+    <div>
+        <div id="carte">test</div>
+    </div>
+</div>
