--- a/frontend/src/app/pic/form-pic/form-pic.component.html
+++ b/frontend/src/app/pic/form-pic/form-pic.component.html
@@ -1,16 +1,18 @@
 <div class="d-flex justify-content-center">
     <form [formGroup]="formAddPIC" class="d-flex flex-column">
         <input type="text" formControlName="name" [(ngModel)]="name"   placeholder="Nom">
-        <input type="text" formControlName="addres" [(ngModel)]="addres" placeholder="Adresse: utiliser la loupe sur la carte">
+        <input type="text" formControlName="address" [(ngModel)]="address" placeholder="Adresse: utiliser la loupe sur la carte">
         <input type="text" formControlName="lat" [(ngModel)]="lat" placeholder="lat">
         <input type="text" formControlName="lng" [(ngModel)]="lng" placeholder="lng">
         <select formControlName="categorie" [(ngModel)]="categorie">
-            <option value="">Restaurant</option>
-            <option value="">Bar</option>
-            <option value="">Hotel</option>
+            <option value="restaurant">Restaurant</option>
+            <option value="bar">Bar</option>
+            <option value="hotel">Hotel</option>
         </select>
+        <button (click)="submit()" class="mt-3">Save</button>
     </form>
     <div class="ml-3">
         <div id="carte" class="shadow-lg p-3 mb-5 bg-body rounded">test</div>
     </div>
+
 </div>
