affichage de tous les pic

--- a/frontend/src/app/utils/navbar/navbar.component.html
+++ b/frontend/src/app/utils/navbar/navbar.component.html
@@ -23,6 +23,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" [routerLink]="['/pic']">Ajouter un pic</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/listPic']">Liste des pic</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
