--- a/frontend/src/app/pic/list-pic/list-pic.component.html
+++ b/frontend/src/app/pic/list-pic/list-pic.component.html
@@ -3,17 +3,17 @@
         <thead>
           <tr>
             <th scope="col">Nom</th>
-            <th scope="col">Adresse</th>
+            <th scope="col">Categorie</th>
             <th scope="col">Lat</th>
             <th scope="col">Lng</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody *ngFor="let p of pic">
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">{{p.name}}</th>
+            <td>{{p.categorie}}</td>
+            <td>{{p.lat}}</td>
+            <td>{{p.lng}}</td>
           </tr>
         </tbody>
       </table>
