--- a/frontend/src/app/pic/list-pic/list-pic.component.html
+++ b/frontend/src/app/pic/list-pic/list-pic.component.html
@@ -23,73 +23,78 @@
     </div>
 </div>
 <div class="d-flex justify-content-around d-wrap" >
-    <button  (click)="showAllPic()" *ngIf="!allIsVisible">Toute les catégories</button>
-    <div class="col-3">
-        <h4>Restaurant</h4>
-        <button (click)="selectResult('restaurant')">Voir</button>
-        <table class="table table-hover"*ngIf="restaurantIsVisible">
-            <thead>
-              <tr>
-                <th scope="col">Nom</th>
-                <th scope="col">Categorie</th>
-                <th scope="col">Lat</th>
-                <th scope="col">Lng</th>
-              </tr>
-            </thead>
-            <tbody *ngFor="let p of pic">
-              <tr>
-                <th scope="row">{{p.name}}</th>
-                <td>{{p.categorie}}</td>
-                <td>{{p.lat}}</td>
-                <td>{{p.lng}}</td>
-              </tr>
-            </tbody>
-          </table>
-    </div>
-    <div class="col-3">
-        <h4>Hôtel</h4>
-        <button (click)="selectResult('hotel')">Voir</button>
-        <table class="table table-hover"*ngIf="hotelIsVisible">
-            <thead>
-              <tr>
-                <th scope="col">Nom</th>
-                <th scope="col">Categorie</th>
-                <th scope="col">Lat</th>
-                <th scope="col">Lng</th>
-              </tr>
-            </thead>
-            <tbody *ngFor="let p of pic">
-              <tr>
-                <th scope="row">{{p.name}}</th>
-                <td>{{p.categorie}}</td>
-                <td>{{p.lat}}</td>
-                <td>{{p.lng}}</td>
-              </tr>
-            </tbody>
-          </table>
-    </div>
-    <div class="col-3">
-        <h4>Bar</h4>
-        <button (click)="selectResult('bar')">Voir</button>
-        <table class="table table-hover" *ngIf="barIsVisible">
-            <thead>
-              <tr>
-                <th scope="col">Nom</th>
-                <th scope="col">Categorie</th>
-                <th scope="col">Lat</th>
-                <th scope="col">Lng</th>
-              </tr>
-            </thead>
-            <tbody *ngFor="let p of pic">
-              <tr>
-                <th scope="row">{{p.name}}</th>
-                <td>{{p.categorie}}</td>
-                <td>{{p.lat}}</td>
-                <td>{{p.lng}}</td>
-              </tr>
-            </tbody>
-          </table>
-    </div>
 
-      
+    <div class="col-3"*ngIf="restaurantIsVisible">
+        <h4>Restaurant</h4>
+        
+        <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Nom</th>
+                <th scope="col">Categorie</th>
+                <th scope="col">Lat</th>
+                <th scope="col">Lng</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let p of pic">
+              <tr>
+                <th scope="row">{{p.name}}</th>
+                <td>{{p.categorie}}</td>
+                <td>{{p.lat}}</td>
+                <td>{{p.lng}}</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+    <div class="col-3"*ngIf="hotelIsVisible">
+        <h4>Hôtel</h4>
+
+        <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Nom</th>
+                <th scope="col">Categorie</th>
+                <th scope="col">Lat</th>
+                <th scope="col">Lng</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let p of pic">
+              <tr>
+                <th scope="row">{{p.name}}</th>
+                <td>{{p.categorie}}</td>
+                <td>{{p.lat}}</td>
+                <td>{{p.lng}}</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+    <div class="col-3"*ngIf="barIsVisible">
+        <h4>Bar</h4>
+
+        <table class="table table-hover" >
+            <thead>
+              <tr>
+                <th scope="col">Nom</th>
+                <th scope="col">Categorie</th>
+                <th scope="col">Lat</th>
+                <th scope="col">Lng</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let p of pic">
+              <tr>
+                <th scope="row">{{p.name}}</th>
+                <td>{{p.categorie}}</td>
+                <td>{{p.lat}}</td>
+                <td>{{p.lng}}</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+<div class="">
+    <button  (click)="showAllPic()" class="mr-2 btn btn-secondary">Toute les catégories</button>
+    <button (click)="selectResult('restaurant')" class="mr-2 btn btn-secondary">Voir tous les resto</button>      
+    <button (click)="selectResult('bar')" class="mr-2 btn btn-secondary">Voir tous les bars</button>
+    <button (click)="selectResult('hotel')" class="mr-2 btn btn-secondary">Voir tous les hôtels</button>
+</div>
+
 </div>
