--- a/frontend/src/app/pic/form-pic/form-pic.component.html
+++ b/frontend/src/app/pic/form-pic/form-pic.component.html
@@ -9,7 +9,7 @@
             <option value="bar">Bar</option>
             <option value="hotel">Hotel</option>
         </select>
-        <button (click)="submit()" class="mt-3">Save</button>
+        <button (click)="submit()" class="mt-3 btn btn-secondary">Save</button>
     </form>
     <div class="ml-3">
         <div id="carte" class="shadow-lg p-3 mb-5 bg-body rounded">test</div>
