--- a/frontend/src/app/pic/list-pic/list-pic.component.html
+++ b/frontend/src/app/pic/list-pic/list-pic.component.html
@@ -13,7 +13,7 @@
         </thead>
         <tbody *ngFor="let p of pic">
           <tr>
-            <th scope="row">{{p.name}}</th>
+            <th scope="row">{{p.name|uppercase}}</th>
             <td>{{p.categorie}}</td>
             <td>{{p.lat}}</td>
             <td>{{p.lng}}</td>
@@ -95,6 +95,7 @@
     <button (click)="selectResult('restaurant')" class="mr-2 btn btn-secondary">Voir tous les resto</button>      
     <button (click)="selectResult('bar')" class="mr-2 btn btn-secondary">Voir tous les bars</button>
     <button (click)="selectResult('hotel')" class="mr-2 btn btn-secondary">Voir tous les hôtels</button>
+    <button [routerLink]="['/pic']" class="mr-2 btn btn-secondary">ajouter un PIC</button>
 </div>
 
 </div>
