ajout de la possibilité de télécharger la liste des pic en pdf, et le détail d'une activité

--- a/frontend/src/app/detail-pi/detail-pi.component.html
+++ b/frontend/src/app/detail-pi/detail-pi.component.html
@@ -94,6 +94,8 @@
       <button (click)="selectResult('restaurant')" class="mr-2 btn btn-secondary">Voir tous les resto</button>
       <button (click)="selectResult('bar')" class="mr-2 btn btn-secondary">Voir tous les bars</button>
       <button (click)="selectResult('hotel')" class="mr-2 btn btn-secondary">Voir tous les hôtels</button>
+      <button (click)="generatePdf()" class="mr-2 btn btn-secondary">PDF</button>
     </div>
+
   </div>
 
