--- a/frontend/src/app/detail-pi/detail-pi.component.html
+++ b/frontend/src/app/detail-pi/detail-pi.component.html
@@ -94,7 +94,7 @@
       <button (click)="selectResult('restaurant')" class="mr-2 btn btn-secondary">Voir tous les resto</button>
       <button (click)="selectResult('bar')" class="mr-2 btn btn-secondary">Voir tous les bars</button>
       <button (click)="selectResult('hotel')" class="mr-2 btn btn-secondary">Voir tous les hôtels</button>
-      <button (click)="generatePdf()" class="mr-2 btn btn-secondary">PDF</button>
+      <button (click)="generatePdf()" class="mr-2 btn btn-secondary">Download PDF</button>
     </div>
 
   </div>
