--- a/frontend/src/app/detail-pi/detail-pi.component.css
+++ b/frontend/src/app/detail-pi/detail-pi.component.css
@@ -1,3 +1,10 @@
 .mW{
     max-width: 36em;
 }
+.divMapGpx{
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+.buttonGpx{
+    margin-left: 1em;
+}
