--- a/frontend/src/app/path/list/list.component.html
+++ b/frontend/src/app/path/list/list.component.html
@@ -1,4 +1,12 @@
+<div class="container z-depth-4 d-flex">
+  <div>
+    <p class="text-primary fw-bold" id="distance"></p>
+    <p class="text-primary fw-bold" id="denivele"></p>
+    <p class="text-primary fw-bold" id="altPlusHaute"></p>
+    <p class="text-primary fw-bold" id="altPlusBasse"></p>
+    <p class="text-primary fw-bold" id="perteAlt"></p>
+  </div>
+  <div id="mapGpx"></div>
 
-        <h1>GPS</h1>
-<div class="col-6 mx-3 my-3 h-550px br-10" id="map"></div>
-<img src="../../../assets/images/biblio.jpg" alt="">
+
+</div>
